--- a/packages/ui/src/loginform/LoginForm.module.css
+++ b/packages/ui/src/loginform/LoginForm.module.css
@@ -83,6 +83,7 @@ text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 500;
 }
 
 .actionButtons {
