--- a/packages/ui/src/signupform/SignUpForm.module.css
+++ b/packages/ui/src/signupform/SignUpForm.module.css
@@ -9,9 +9,7 @@
   flex-direction: column;
 }
 
-.container :global(*){
-  font-family: "Inter", sans-serif
-}
+
 
 .card {
   width: 420px;
@@ -105,7 +103,6 @@ margin-bottom: 10px;
   display: flex;
   align-items: flex-start;
   gap: 8px;
-  font-family: "Inter", sans-serif;
   font-size: 14px;
   line-height: 1.4;
   color: #1f1f1f !important;
